--- a/PICO Solder Weight/App.config
+++ b/PICO Solder Weight/App.config
@@ -7,6 +7,11 @@
             connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=&quot;|DataDirectory|\PICO Solder Weight.accdb&quot;"
             providerName="System.Data.OleDb" />
     </connectionStrings>
+
+	<appSettings>
+		<add key="mg" value="2.26"/>
+		<add key="OCAP" value="0"/>
+	</appSettings>
 	
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
