Biometrics - Register and Error

--- a/PICO Solder Weight/App.config
+++ b/PICO Solder Weight/App.config
@@ -6,6 +6,9 @@
         <add name="PICO_Solder_Weight.My.MySettings.PICO_Solder_WeightConnectionString"
             connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=&quot;|DataDirectory|\PICO Solder Weight.accdb&quot;"
             providerName="System.Data.OleDb" />
+        <add name="PICO_Solder_Weight.My.MySettings.SWMaster_dbConnectionString"
+            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=&quot;C:\LF Database\SWMaster_db.accdb&quot;;Jet OLEDB:Database Password=lfswmaster"
+            providerName="System.Data.OleDb" />
     </connectionStrings>
 
 	<appSettings>
