--- a/PICO Solder Weight/My Project/Settings.settings
+++ b/PICO Solder Weight/My Project/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Provider=Microsoft.ACE.OLEDB.12.0;Data Source="|DataDirectory|\PICO Solder Weight.accdb"</Value>
     </Setting>
+    <Setting Name="SWMaster_dbConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;ConnectionString&gt;Provider=Microsoft.ACE.OLEDB.12.0;Data Source="C:\LF Database\SWMaster_db.accdb";Jet OLEDB:Database Password=lfswmaster&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.OleDb&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Provider=Microsoft.ACE.OLEDB.12.0;Data Source="C:\LF Database\SWMaster_db.accdb";Jet OLEDB:Database Password=lfswmaster</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
