--- a/PICO Solder Weight/PICO Solder Weight.vbproj
+++ b/PICO Solder Weight/PICO Solder Weight.vbproj
@@ -27,14 +27,14 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ProductName>PICO Solder Weight Software</ProductName>
     <PublisherName>Littelfuse Philippines %28TSG%29 - GCatapang</PublisherName>
-    <ApplicationRevision>6</ApplicationRevision>
+    <ApplicationRevision>16</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>x64</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
@@ -67,7 +67,7 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>littelfuse-icon.ico</ApplicationIcon>
+    <ApplicationIcon>LF logo.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>F1655382B2763451E9370A23193FE328A6496D94</ManifestCertificateThumbprint>
@@ -198,6 +198,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>PICO_Solder_WeightDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Purging_Form.Designer.vb">
+      <DependentUpon>Purging_Form.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Purging_Form.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="SC_FormCode.vb" />
     <Compile Include="SolderCutter_Form.Designer.vb">
       <DependentUpon>SolderCutter_Form.vb</DependentUpon>
@@ -229,6 +235,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Purging_Form.resx">
+      <DependentUpon>Purging_Form.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SolderCutter_Form.resx">
       <DependentUpon>SolderCutter_Form.vb</DependentUpon>
@@ -271,10 +280,15 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="LF logo.ico" />
     <Content Include="littelfuse-icon.ico" />
     <Content Include="PICO Solder Weight.accdb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\minus_White.png" />
+    <None Include="Resources\minus_Blue.png" />
+    <None Include="Resources\add_White.png" />
+    <None Include="Resources\add_Blue.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
