--- a/PICO Solder Weight/PICO Solder Weight.vbproj
+++ b/PICO Solder Weight/PICO Solder Weight.vbproj
@@ -34,7 +34,7 @@
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
@@ -193,6 +193,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="OCAP_Form.Designer.vb">
+      <DependentUpon>OCAP_Form.vb</DependentUpon>
+    </Compile>
+    <Compile Include="OCAP_Form.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="PICO_Solder_WeightDataSet.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -235,6 +241,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OCAP_Form.resx">
+      <DependentUpon>OCAP_Form.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Purging_Form.resx">
       <DependentUpon>Purging_Form.vb</DependentUpon>
