--- a/PICO Solder Weight/App.config
+++ b/PICO Solder Weight/App.config
@@ -14,6 +14,8 @@
 	<appSettings>
 		<add key="mg" value="2.26"/>
 		<add key="OCAP" value="1"/>
+		<add key="WeighingCOM" value="COM3"/>
+		<add key="LockArdCOM" value="COM5"/>
 	</appSettings>
 	
     <startup>
