--- a/PICO Solder Weight/App.config
+++ b/PICO Solder Weight/App.config
@@ -16,6 +16,7 @@
 		<add key="OCAP" value="1"/>
 		<add key="WeighingCOM" value="COM3"/>
 		<add key="LockArdCOM" value="COM5"/>
+		<add key="PLCCom" value="COM4"/>
 	</appSettings>
 	
     <startup>
