--- a/PICO Solder Weight/App.config
+++ b/PICO Solder Weight/App.config
@@ -12,14 +12,14 @@
     </connectionStrings>
 
 	<appSettings>
-		<add key="mg" value="12.0"/>
+		<add key="mg" value="14.0"/>
 		<add key="OCAP" value="1"/>
 		<add key="WeighingCOM" value="COM3"/>
 		<add key="LockArdCOM" value="COM8"/>
 		<add key="PLCCom" value="COM4"/>
 
-		<add key="SPCRule4" value="True"/>
-		<add key="SPCRule5" value="True"/>
+		<add key="SPCRule4" value="False"/>
+		<add key="SPCRule5" value="False"/>
 	</appSettings>
 	
     <startup>
