--- a/PICO Solder Weight/App.config
+++ b/PICO Solder Weight/App.config
@@ -18,8 +18,8 @@
 		<add key="LockArdCOM" value="COM8"/>
 		<add key="PLCCom" value="COM4"/>
 
-		<add key="SPCRule4" value="False"/>
-		<add key="SPCRule5" value="False"/>
+		<add key="SPCRule4" value="True"/>
+		<add key="SPCRule5" value="True"/>
 	</appSettings>
 	
     <startup>
