Add form to Edit COM names

--- a/PICO Solder Weight/App.config
+++ b/PICO Solder Weight/App.config
@@ -11,4 +11,16 @@
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+
+	<appSettings>
+		<add key="mg" value="12.0"/>
+		<add key="OCAP" value="1"/>
+		<add key="WeighingCOM" value="COM3"/>
+		<add key="LockArdCOM" value="COM8"/>
+		<add key="PLCCom" value="COM4"/>
+
+		<add key="SPCRule4" value="True"/>
+		<add key="SPCRule5" value="True"/>
+	</appSettings>
+	
 </configuration>
